--- a/css/main.css
+++ b/css/main.css
@@ -566,6 +566,316 @@ A:hover {
   padding-bottom: 57px;
 }
 
+/*  3-page */
+
+
+/*  2-page */
+
+
+.center_col {
+  overflow: hidden;
+}
+#inner .center_col .head_center_page2 {
+  margin-bottom: 13px;
+  font: bold 16px arial;
+  color: black;
+}
+#inner .center_col .head_center_page2 A {
+  color: black;
+}
+.center_col .left_center {
+  float: left;
+  width: 194px;
+}
+.center_col .left_center .only {
+  width: 176px;
+  height: 226px;
+  border: 1px solid #ACACAC;
+  text-align: center;
+  margin-bottom: 6px;
+  position: relative;
+}
+.center_col .left_center .only IMG {
+  float: left;   
+}
+.center_col .left_center .only .only_link {
+  display: block;
+  width: 170px;
+  height: 17px;
+  border: 1px solid #61050E;
+  border-radius: 6px;
+  background: url(../images/bg_onli_ssilka.png) repeat-x 0 0;
+  font: 9px/17px arial;
+  color: white;
+  text-align: center;
+  position: absolute;
+  bottom: 3px;
+  left: 2px;   
+}
+.center_col .left_center .only .only_pos {
+  width: 102px;
+  height: 30px;
+  background: url(../images/bg_only_pos.png) repeat-x 0 0;
+  font: bold 9px/8px arial;
+  color: black;
+  text-align: center;
+  padding-top: 5px;
+  position: absolute;
+  top: -6px;
+  right: 4px;   
+}
+.center_col .left_center .clock_small_block {
+   overflow: hidden;
+   margin-bottom: 13px;
+}
+.center_col .left_center .clock_small {
+  float: left;
+  border: 1px solid #ACACAC;
+  margin-right: 5px;
+  overflow: hidden;   
+}
+.center_col .left_center .only .clock_small IMG {
+  float: left;     
+}
+.center_col .left_center .subscription_block {
+  width: 177px;
+  height: 50px;
+  border: 1px solid #898989;
+  border-radius: 5px;
+  overflow: hidden;       
+}
+.center_col .left_center .subscription_block .sub_left {
+  float: left;
+  width: 92px;
+  height: 45px;
+  border-right: 1px solid #898989;
+  padding-top: 5px;
+  background: url(../images/bg_subscription_block-left.jpg) repeat-x 0 0;
+  font: bold 15px tahoma;
+  color: white;
+  text-align: center;       
+}
+.center_col .left_center .subscription_block .sub_left SPAN {
+  font: 13px/14px tahoma;
+  color: black;
+  text-decoration: line-through;       
+}
+.center_col .left_center .subscription_block .sub_right {
+  float: right;
+  width: 78px;
+  height: 47px;
+  padding: 1px 0 0 6px;
+  background: url(../images/bg_subscription_block_right.png) no-repeat 67px 16px;
+  font: italic bold 10px/15px verdana;
+  color: black;       
+}
+.center_col .left_center .subscription_block .sub_right SPAN {
+  color: #9A0816;         
+}
+.center_col .left_center .services {
+  overflow: hidden;
+}
+.center_col .left_center .services .services_item {
+  float: left;
+  margin: 20px 0;
+}
+.center_col .left_center .services .services_item .services_img {
+  margin: 0 6px 0 0;
+  text-align: center;
+  font: bold 8px/12px arial;
+  color: black;
+  overflow: hidden;
+  
+}
+.center_col .left_center .services .services_item .services_img IMG {
+}
+.center_col .left_center .services .services_item .services_img SPAN {
+  display: block;
+}
+.center_col .left_center .quick_order {
+  width: 177px;
+  height: 123px;
+  border: 1px solid #898989;
+  padding-top: 5px;
+  background: url(../images/bg_quick_order.png) no-repeat 0 0;
+  overflow: hidden;
+}
+.center_col .left_center .quick_order .quick_order_head {
+  margin-bottom: 11px;
+  font: bold italic 14px tahoma;
+  color: #9A0816;
+  text-align: center;
+}
+.center_col .left_center .quick_order .quick_order_left {
+  float: left;
+  width: 83px;
+  margin-right: 4px;
+  font: bold 11px arial;
+  color: black;
+  text-align: right;
+}
+.center_col .left_center .quick_order .quick_order_left SPAN {
+  display: inline-block;
+  margin-bottom: 6px;
+}
+.center_col .left_center .quick_order .quick_order_right {
+    margin-left: 87px;
+}
+.center_col .left_center .quick_order .quick_order_right INPUT{
+  width: 80px;
+  height: 12px;
+  border: 2px solid #B5B5B5;
+  border-bottom: 1px solid #898989;    
+}
+.center_col .left_center .quick_order .quick_order_right .field_last {
+  margin-bottom: 0;    
+}
+.center_col .left_center .quick_order .order {
+  width: 71px;
+  height: 20px;
+  border: 1px solid #890202;
+  border-radius: 4px;
+  background: url(../images/bg_sub_zakaz.png) repeat-x 0 0;
+  font: bold 11px arial;
+  color: #9C0E1B; 
+  margin: 8px 0 0 52px;    
+}
+.center_col .right_center {
+  float: right;
+  width: 356px;    
+}
+.center_col .right_center .text_top {
+  font: bold 11px/14px arial;
+  color: black;
+  padding-left: 5px;
+  margin-bottom: 16px;
+}
+.center_col .right_center .table_head {
+  overflow: hidden;
+  width: 354px;
+  border-top: 1px solid #898989;
+  border-left: 1px solid #898989;
+  border-right: 1px solid #898989;
+  background: url(../images/bg_table-head.png) repeat-x bottom left;
+}
+.center_col .right_center .table_head LI {
+  float: left;
+  width: 88px;
+  height: 34px;
+  text-align: center;
+}
+.center_col .right_center .table_head .table_last {
+  border-right: none;
+}
+.center_col .right_center .table_head LI A {
+  display: inline-block;
+  height: 15px;
+  border-bottom: 2px dashed #B8B8B8;
+  margin-top: 8px;
+  font: 11px arial;
+  color: black;
+  text-decoration: none;
+}
+.center_col .right_center .table_head LI.act1 {
+  border-right: 1px solid #898989;
+  background: #DBDBDB;
+}
+.center_col .right_center .table_head LI.act2 {
+  border-right: 1px solid #898989;
+  border-left: 1px solid #898989;
+  background: #DBDBDB;
+}
+.center_col .right_center .table_head LI.act3 {
+  border-left: 1px solid #898989;
+  background: #DBDBDB;
+}
+.center_col .right_center .table {
+  border-left: 1px solid #898989;
+  border-right: 1px solid #898989;
+  border-bottom: 1px solid #898989;
+  padding: 7px 0 5px 0;
+  background: #DBDBDB;
+}
+.center_col .right_center .table .table_item {
+  padding: 17px 0 12px 0;
+  margin: 0 10px 0 10px;
+  border-bottom: 1px solid #898989;
+  font: 11px arial;
+  color: black;
+  text-align: left;
+  overflow: hidden;
+}
+.center_col .right_center .table .table_item_last {
+  border-bottom: none;
+}
+.center_col .right_center .table .table_item .table_left {
+  float: left;
+  width: 113px;
+  padding-left: 5px;
+}
+.center_col .right_center .table .table_item .table_right {
+  margin-left: 118px;
+}
+.center_col .right_center .table .table_item .table_right P {
+  margin: 0;
+}
+.center_col .right_center .add_to_cart_block {
+  height: 91px;
+  border-left: 1px solid #898989;
+  border-right: 1px solid #898989;
+  border-bottom: 1px solid #898989;
+  background: url(../images/bg_add_to_cart_block.jpg) no-repeat 0 0;
+}
+.center_col .right_center .add_to_cart_block FORM {
+  float: right;
+  position: relative;
+}
+.center_col .right_center .add_to_cart_block FORM .tick {
+  float: right;
+  width: 18px;
+  height: 17px;
+  background: url(../images/galochka_vkorzinu.png) no-repeat 0 0;
+  position: absolute;
+  top: 8px;
+  left: 7px;
+  
+}
+.center_col .right_center .add_to_cart_block FORM INPUT {
+  width: 145px;
+  height: 22px;
+  padding-right: 5px;
+  margin: 10px 13px 0 0;
+  border: 1px solid #890202;
+  border-radius: 5px;
+  background: url(../images/bg_dobavitvkorzinu.jpg) no-repeat 0 0;
+  font: bold 11px/11px arial;
+  color: #9C0E1B;
+  text-align: right;
+}
+.center_col .right_center .add_to_cart_block .commodity_price {
+  padding-top: 12px;
+  margin: 0 0 5px 27px;
+  font: bold 16px arial;
+  color: #9A0816;
+}
+.center_col .right_center .add_to_cart_block .subscribe {
+  display: inline-block;
+  padding-right: 10px;
+  margin: 0 0 5px 8px;
+  border-bottom: 2px dashed #F02D2D;
+  background: url(../images/bg_subscribe.png) no-repeat center right;
+  font: bold italic 11px arial ;
+  color: #F02D2D;
+  text-decoration: none;
+}
+.center_col .right_center .add_to_cart_block .delivery {
+  padding-top: 6px;
+  margin: 0 7px 0 7px;
+  border-top: 1px solid #898989;
+  font: bold italic 10px tahoma;
+  text-align: center;
+  color: #9C0E1B;
+}
 
 
 
@@ -580,3 +890,16 @@ A:hover {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+/*  2-page */
