--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ A:hover {
 
 #inner .left_col {
   float: left;
-	width: 22%;
+	width: 205px;
 	overflow: hidden;
 }
 #inner .left_col .left_col_navi {
@@ -232,7 +232,6 @@ A:hover {
   text-decoration: none;
 	color: #A70202;
 }
-
 #inner .left_col .filter {
   width: 200px;
 	margin: 0 0 0 5px;
@@ -337,7 +336,7 @@ A:hover {
   background: url(../images/sel_block.png) repeat-y 50% 0;
 }
 #inner .right_col .sel_inner .sel_block .sel_item  {
-  width: 198px;
+  width: 196px;
 	text-align: center;
 }
 #inner .right_col .sel_inner .sel_block .sel_item IMG {
@@ -371,7 +370,7 @@ A:hover {
   display: block;
 	float: left;
 	text-align: none;
-	width: 79px;
+	width: 77px;
 	padding-right: 0px;
 	margin-left: 20px;
 	font: 11px/25px arial;
@@ -382,7 +381,7 @@ A:hover {
 #inner .right_col .sel_inner .sel_block .sel_item .sel_text .arrow_left {
   display: block;
 	float: right;
-	width: 79px;
+	width: 77px;
 	margin-right: 20px;
 	font: 11px/25px arial;
 	color: #000;
@@ -442,9 +441,10 @@ A:hover {
 
 
 #footer {
-	height: 100px;
+	height: 113px;
 	margin: 10px;
   border-top: solid 1px #9A0816;
+  overflow: hidden;
 }
 
 #footer .foot_cal {
@@ -542,7 +542,7 @@ A:hover {
 } 
 #inner .center_col {
   padding: 22px 20px 0 0;
-  margin: 0 208px 0 219px;
+  margin: 0 208px 0 214px;
 }
 #inner .center_col .head_center_col {
   margin-bottom: 13px;
@@ -582,6 +582,7 @@ A:hover {
 }
 #inner .center_col .head_center_page2 A {
   color: black;
+  text-decoration: none;
 }
 .center_col .left_center {
   float: left;
@@ -669,6 +670,11 @@ A:hover {
   font: italic bold 10px/15px verdana;
   color: black;       
 }
+.center_col .left_center .subscription_block .sub_right A {
+  display: block;
+  color: black; 
+  text-decoration: none;      
+}
 .center_col .left_center .subscription_block .sub_right SPAN {
   color: #9A0816;         
 }
@@ -738,7 +744,8 @@ A:hover {
   background: url(../images/bg_sub_zakaz.png) repeat-x 0 0;
   font: bold 11px arial;
   color: #9C0E1B; 
-  margin: 8px 0 0 52px;    
+  margin: 8px 0 0 52px;   
+  cursor: pointer; 
 }
 .center_col .right_center {
   float: right;
@@ -851,6 +858,7 @@ A:hover {
   font: bold 11px/11px arial;
   color: #9C0E1B;
   text-align: right;
+  cursor: pointer;
 }
 .center_col .right_center .add_to_cart_block .commodity_price {
   padding-top: 12px;
@@ -877,29 +885,141 @@ A:hover {
   color: #9C0E1B;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*  2-page */
+
+
+/*  index */
+.center_col_index {
+	margin: 0 208px 0 214px;
+  padding-top: 10px;
+}
+.center_col_index .sel_head {
+  width: 570px;
+	height: 42px;
+	margin-bottom: 4px;
+  background: url(../images/bg_sel_head2.png) no-repeat 0 0;
+  font: 18px/39px arial;
+	color: #fff;
+}
+.center_col_index .sel_head SPAN {
+	display: block;
+  padding-left: 35px;
+  background: url(../images/pointer_down.png) no-repeat 16px 12px;
+}
+.center_col_index .sel_inner .sel_block  {
+  width: 562px;
+  padding-left: 7px;
+  overflow: hidden;
+}
+.center_col_index .sel_inner .sel_block .sel_item  {
+  width: 178px;
+	text-align: center;
+  float: left;
+  margin-right: 11px;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_item_foto  {
+  border: solid 1px #C5C6C5;
+  border-radius: 1px;
+  margin-bottom: 11px;
+  position: relative;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_item_foto .novelty  {
+  width: 69px;
+  height: 58px;
+  background: url(../images/novinka.jpg) no-repeat 0 0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
+}
+.center_col_index .sel_inner .sel_block .last_sel  {
+  margin-right: 0;
+}
+.center_col .sel_inner .sel_block .sel_item IMG {
+  width: 176px;
+	height: 189px;
+	border: solid 1px #C5C6C5;
+	border-radius: 1px;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text {
+  overflow: hidden;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text .sell_text_model {
+  font: 14px arial;
+	color: #000;
+	width: 180px;
+	margin: 31px 0 4px 0;
+	text-align: center;
+	overflow: hidden;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text .sel_cost_old {
+  float: left;
+	margin-left: 10px;
+	font: 16px arial;
+	color: #000;
+	text-decoration: line-through;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text .sel_cost_new {
+  float: right;
+	margin-right: 10px;
+	font: 18px arial;
+	color: #f00;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text .bask {
+  display: block;
+	float: left;
+	text-align: none;
+	width: 79px;
+	margin-left: 10px;
+	font: 11px/25px arial;
+	color: #000;
+	text-decoration: underline;
+	background: url(../images/sel_bask.png) no-repeat 0 50%;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text .arrow_left {
+  display: block;
+	float: right;
+	width: 79px;
+	margin-right: 10px;
+	font: 11px/25px arial;
+	color: #000;
+	text-decoration: underline;
+	margin-bottom: 14px;
+	background: url(../images/arrow_left.png) no-repeat 100% 50%;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text .arrow_left:hover {
+  text-decoration: none;
+}
+.center_col_index .sel_inner .sel_block .sel_item .sel_text .bask:hover,
+.center_col_index_inner .sel_block .sel_item .sel_text .arrow_left:hover {
+  text-decoration: none;
+}
+
+.destination {
+  border-top: 1px solid #A70202;
+  padding: 13px 0 0 0;
+  margin: 27px 16px 35px 0;
+}
+.destination .destination_head {
+  font: 14px verdana;
+  color: black;
+  margin-bottom: 19px;
+}
+.destination .destination_head A {
+  color: black;
+  text-decoration: none;
+}
+.destination .destination_text {
+  font: 12px/16px tahoma;
+  color: black;
+}
+
+
+
+
+
+
+
+
+
+/*  index */
